--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
+<h2>My Second Heading</h2>
+<p>My second paragraph.</p>
 
 </body>
 </html>
