--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<h1>William Beasley Fall 25' W01 KSU IT 3203 Introduction to Web Development</h1>
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <h2>My Second Heading</h2>
 <p>My second paragraph.</p>
+
 
 </body>
 </html>
