Update from phone index.html
A change was made from the iPhone

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p>My first paragraph.</p>
 <h2>My Second Heading</h2>
 <p>My second paragraph.</p>
-
+<p>this adjustment was made from my phone</p>
 
 </body>
 </html>
