Update to all files
Uploaded the navigation bar

--- a/page_2.html
+++ b/page_2.html
@@ -1,1 +1,25 @@
-second html page
+<!-- page_2 # wbeasle2.github.io-->
+<html>
+    <head>  
+        <title>Research2</title>
+    </head>
+<body>
+    <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="page_1">Research1</a></li>
+          <li><a href="page_2.html">Research2</a></li>
+          <li><a href="key_concepts.html">Key Concepts</a></li>
+          <li><a href="reference_resource.html">References</a></li>
+        </ul>
+      </nav>     
+<h1>William Beasley Fall 25' W01 KSU IT 3203 Introduction to Web Development</h1>
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+<h2>My Second Heading</h2>
+<p>My second paragraph.</p>
+<p>this adjustment was made from my phone</p>
+
+</body>
+</html>
