--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
-# wbeasle2.github.io
+<!--Home/index page# # wbeasle2.github.io-->
 <!DOCTYPE html>
 <html>
+    <head>  
+        <title>Home Page</title>
+    </head>
 <body>
+    <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="page_1">Research1</a></li>
+          <li><a href="page_2.html">Research2</a></li>
+          <li><a href="key_concepts.html">Key Concepts</a></li>
+          <li><a href="reference_resource.html">References</a></li>
+        </ul>
+      </nav>
+      
 <h1>William Beasley Fall 25' W01 KSU IT 3203 Introduction to Web Development</h1>
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
