updated content of webpages

--- a/page_1.html
+++ b/page_1.html
@@ -17,11 +17,10 @@
       </nav>
       
 <h1>William Beasley Fall 25' W01 KSU IT 3203 Introduction to Web Development</h1>
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-<h2>My Second Heading</h2>
-<p>My second paragraph.</p>
-<p>this adjustment was made from my phone</p>
+<p>
+    Let's begin the history of servers when waaaayy  back when
+</p>
+
 
 </body>
 </html>
