--- a/about.html
+++ b/about.html
@@ -15,12 +15,7 @@
           <li><a href="reference_resource.html">References</a></li>
         </ul>
       </nav>     
-<h1>William Beasley Fall 25' W01 KSU IT 3203 Introduction to Web Development</h1>
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-<h2>My Second Heading</h2>
-<p>My second paragraph.</p>
-<p>this adjustment was made from my phone</p>
+<h1>About me</h1>
 
 </body>
 </html>
