--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </ul>
       </nav>
       
-<h1>William Beasley Fall 25' W01 KSU IT 3203 Introduction to Web Development</h1>
-<h1>My First Heading</h1>
+<h1>Home page</h1>
+<h1>Welcome to my website about the history of servers</h1>
 <p>My first paragraph.</p>
 <h2>My Second Heading</h2>
 <p>My second paragraph.</p>
