--- a/page_2.html
+++ b/page_2.html
@@ -15,8 +15,8 @@
           <li><a href="reference_resource.html">References</a></li>
         </ul>
       </nav>     
-<h1>William Beasley Fall 25' W01 KSU IT 3203 Introduction to Web Development</h1>
-<h1>My First Heading</h1>
+
+<h1>Servers now</h1>
 <p>My first paragraph.</p>
 <h2>My Second Heading</h2>
 <p>My second paragraph.</p>
