Connect page_1 to other pages and update links

--- a/reference_resource.html
+++ b/reference_resource.html
@@ -8,7 +8,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="page_1">Research1</a></li>
+          <li><a href="page_1.html">Research1</a></li>
           <li><a href="page_2.html">Research2</a></li>
           <li><a href="key_concepts.html">Key Concepts</a></li>
           <li><a href="reference_resource.html">References</a></li>
