changes made to page 1

--- a/page_1.html
+++ b/page_1.html
@@ -18,7 +18,7 @@
       
 <h1>William Beasley Fall 25' W01 KSU IT 3203 Introduction to Web Development</h1>
 <p>
-    Let's begin the history of servers when waaaayy  back when
+    Let's begin the history of servers when waaaayy  back when long long ago.
 </p>
 
 
