Revise index.html with new meta tags and content
Updated HTML structure and added content.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
-<html>
-    <head>  
-        <title>Home Page</title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-R8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Website</title>
+</head>
+
 <body>
     <nav>
         <ul>
@@ -22,6 +24,10 @@
 <h2>My Second Heading</h2>
 <p>My second paragraph.</p>
 <p>this adjustment was made from my phone</p>
+<h1>Hello, World!</h1>
+    <p>This is my first website. It's pretty cool.</p>
+    <img src="httpstinyurl.com/your-image-url" alt="A descriptive image alt text">
+    <a href="https://www.google.com">This is a link to Google</a>
 
 </body>
 </html>
