Add script tag to include script.js and link to css file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-R8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>My First Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,6 +30,6 @@
     <p>This is my first website. It's pretty cool.</p>
     <img src="httpstinyurl.com/your-image-url" alt="A descriptive image alt text">
     <a href="https://www.google.com">This is a link to Google</a>
-
+    <script src="script.js"></script>
 </body>
 </html>
