--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
           <li><a href="page_2.html">Research2</a></li>
           <li><a href="key_concepts.html">Key Concepts</a></li>
           <li><a href="reference_resource.html">References</a></li>
+          <li><a href="quiz.html">Quiz</a></li>  
         </ul>
       </nav>     
 <h1>About me</h1>
