Add navigation links to quiz.html

--- a/quiz.html
+++ b/quiz.html
@@ -10,6 +10,11 @@
 
     <nav>
         <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+          <a href="page_1.html">Research1</a>
+        <a href="page_2.html">Research2</a>
+          <a href="key_concepts.html">Key Concepts</a>
+          <a href="reference_resource.html">References</a>
         <a href="quiz.html">Quiz</a>
         </nav>
 
