Refactor about.html with new structure and content
Updated the structure of the about.html file to include meta tags, a new title, and additional content about the author.

--- a/about.html
+++ b/about.html
@@ -1,22 +1,31 @@
-
 <!DOCTYPE html>
-<html>
-    <head>  
-        <title>About</title>
-    </head>
-<body>
-    <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="page_1.html">Research1</a></li>
-          <li><a href="page_2.html">Research2</a></li>
-          <li><a href="key_concepts.html">Key Concepts</a></li>
-          <li><a href="reference_resource.html">References</a></li>
-          <li><a href="quiz.html">Quiz</a></li>  
-        </ul>
-      </nav>     
-<h1>About me</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-R8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>My First Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+    <nav>       
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="page_1.html">Research1</a>
+        <a href="page_2.html">Research2</a>
+        <a href="key_concepts.html">Key Concepts</a>
+        <a href="reference_resource.html">References</a>
+        <a href="quiz.html">Quiz</a>
+    </nav>
+<div>      
+<h1>About Me</h1>
+<h1>Junior IT Major at KSU</h1>h1>
+<p>My first paragraph.</p>
+<h2>My Second Heading</h2>
+<p>My second paragraph.</p>
+<p>this adjustment was made from my phone</p>
+<h1>Hello, World!</h1>
+</div>
 </body>
 </html>
