--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="quiz.html">Quiz</a>
         
       </nav>
-      
+ <div class ='container'></div>     
 <h1>Home page</h1>
 <h1>Welcome to my website about the history of servers</h1>
 <p>My first paragraph.</p>
@@ -31,6 +31,7 @@
     <p>This is my first website. It's pretty cool.</p>
     <img src="httpstinyurl.com/your-image-url" alt="A descriptive image alt text">
     <a href="https://www.google.com">This is a link to Google</a>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
