--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="quiz.html">Quiz</a>
         
       </nav>
- <div class ='container'>     
+ <div class ="container">     
 <h1>Home page</h1>
 <h1>Welcome to my website about the history of servers</h1>
 <p>My first paragraph.</p>
