--- a/key_concepts.html
+++ b/key_concepts.html
@@ -1,22 +1,25 @@
-
 <!DOCTYPE html>
-<html>
-    <head>  
-        <title>Key Concepts</title>
-    </head>
-<body>
-    <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="page_1.html">Research1</a></li>
-          <li><a href="page_2.html">Research2</a></li>
-          <li><a href="key_concepts.html">Key Concepts</a></li>
-          <li><a href="reference_resource.html">References</a></li>
-          <li><a href="quiz.html">Quiz</a></li>  
-        </ul>
-      </nav>     
-<h1>Key Concepts</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-R8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Key Concepts</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+    <nav>       
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="page_1.html">Research1</a>
+        <a href="page_2.html">Research2</a>
+        <a href="key_concepts.html">Key Concepts</a>
+        <a href="reference_resource.html">References</a>
+        <a href="quiz.html">Quiz</a>
+    </nav>
+<div>      
+<h1>Key Concepts</h1>
+</div>
 </body>
 </html>
