Refactor page_1.html for improved semantics
Updated HTML structure and navigation links.

--- a/page_1.html
+++ b/page_1.html
@@ -1,27 +1,25 @@
-
 <!DOCTYPE html>
-<html>
-    <head>  
-        <title>Research1</title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-R8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>My First Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
-    <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="page_1.html">Research1</a></li>
-          <li><a href="page_2.html">Research2</a></li>
-          <li><a href="key_concepts.html">Key Concepts</a></li>
-          <li><a href="reference_resource.html">References</a></li>
-          <li><a href="quiz.html">Quiz</a></li> 
-        </ul>
-      </nav>
-      
-<h1>William Beasley Fall 25' W01 KSU IT 3203 Introduction to Web Development</h1>
-<p>
-    Let's begin the history of servers when waaaayy  back when long long ago.
-</p>
-
-
+    <nav>       
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="page_1.html">Research1</a>
+        <a href="page_2.html">Research2</a>
+        <a href="key_concepts.html">Key Concepts</a>
+        <a href="reference_resource.html">References</a>
+        <a href="quiz.html">Quiz</a>
+    </nav>
+<div>      
+<h1>History of Servers</h1>
+</div>
 </body>
 </html>
