--- a/page_2.html
+++ b/page_2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-R8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>My First Website</title>
+    <title>Page 2 of history of servers</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -19,13 +19,8 @@
         <a href="quiz.html">Quiz</a>
     </nav>
 <div>      
-<h1>About Me</h1>
-<h1>Junior IT Major at KSU</h1>h1>
-<p>My first paragraph.</p>
-<h2>My Second Heading</h2>
-<p>My second paragraph.</p>
-<p>this adjustment was made from my phone</p>
-<h1>Hello, World!</h1>
+<h1>Page 2 of history of servers</h1>
+
 </div>
 </body>
 </html>
