Update title in page_1.html

--- a/page_1.html
+++ b/page_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-R8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>My First Website</title>
+    <title>Page 1 of history of servers</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
