--- a/reference_resource.html
+++ b/reference_resource.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html>
-    <head>  
-        <title>Reference</title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-R8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>reference resources</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
-    <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="page_1.html">Research1</a></li>
-          <li><a href="page_2.html">Research2</a></li>
-          <li><a href="key_concepts.html">Key Concepts</a></li>
-          <li><a href="reference_resource.html">References</a></li>
-        </ul>
-      </nav>     
-
-<h1>References</h1>
-
+    <nav>       
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="page_1.html">Research1</a>
+        <a href="page_2.html">Research2</a>
+        <a href="key_concepts.html">Key Concepts</a>
+        <a href="reference_resource.html">References</a>
+        <a href="quiz.html">Quiz</a>
+    </nav>
+<div>      
+<h1>Reference resources</h1>
+</div>
 </body>
 </html>
