--- a/quiz.html
+++ b/quiz.html
@@ -4,19 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+          crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-          <a href="page_1.html">Research1</a>
-        <a href="page_2.html">Research2</a>
-          <a href="key_concepts.html">Key Concepts</a>
-          <a href="reference_resource.html">References</a>
-        <a href="quiz.html">Quiz</a>
-        </nav>
+    <header>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">My IT Project</a>
+            
+            <button class="navbar-toggler" type="button" 
+                    data-bs-toggle="collapse" 
+                    data-bs-target="#navbarNav" 
+                    aria-controls="navbarNav" 
+                    aria-expanded="false" 
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="page_1.html">Research 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="page_2.html">Research 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="key_concepts.html">Key Concepts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="reference_resource.html">References</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="quiz.html">Quiz</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
     <main class="quiz-container">
         <h1>Self-Assessment Quiz</h1>
