--- a/quiz.html
+++ b/quiz.html
@@ -142,6 +142,10 @@
                             <div class="form-check">
                                 <input type="checkbox" name="q5" value="a" class="form-check-input" id="q5-a">
                                 <label class="form-check-label" for="q5-a"> &lt;article&gt;</label>
+                                <label><input type="checkbox" name="q5" value="a"> &lt;article&gt;</label>
+                                <label><input type="checkbox" name="q5" value="b"> &lt;section&gt;</label>
+                                <label><input type="checkbox" name="q5" value="c"> &lt;divider&gt;</label>
+                                <label><input type="checkbox" name="q5" value="d"> &lt;header&gt;</label>
                             </div>
                             </fieldset>
     
