Change title of nav bar

--- a/key_concepts.html
+++ b/key_concepts.html
@@ -17,7 +17,7 @@
     <header>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">My IT Project</a>
+            <a class="navbar-brand" href="index.html">IT 3203 Project</a>
             
             <button class="navbar-toggler" type="button" 
                     data-bs-toggle="collapse" 
