--- a/reference_resource.html
+++ b/reference_resource.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">My IT Project</a>
+                <a class="navbar-brand" href="index.html">IT 3203 Project</a>
                 
                 <button class="navbar-toggler" type="button" 
                         data-bs-toggle="collapse" 
