--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             </div>
         </nav>
     </header>
-    
+
 <div>      
 <h1>About Me</h1>
 <h1>Junior IT Major at KSU</h1>h1>
@@ -66,5 +66,9 @@
 <p>this adjustment was made from my phone</p>
 <h1>Hello, World!</h1>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
