--- a/page_2.html
+++ b/page_2.html
@@ -57,7 +57,23 @@
     </nav>
 </header>
 <div>      
-<h1>Page 2 of history of servers</h1>
+    <main>
+        <div class="container my-4"> 
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-10"> 
+                    
+                    <h1>History of the servers</h1>
+                    <h2>Junior IT Major at KSU</h2>
+                    <p>My first paragraph.</p>
+                    <h2>My Second Heading</h2>
+                    <p>My second paragraph.</p>
+                    <p>this adjustment was made from my phone</p>
+                    <h1>Hello, World!</h1>
+                    
+                </div>
+            </div>
+        </div>
+    </main>
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
