--- a/reference_resource.html
+++ b/reference_resource.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-R8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>reference resources</title>
+    <title>Reference Resources</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
           rel="stylesheet" 
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
@@ -71,7 +71,7 @@
                                Gundavaram, Shishir. “CGI Programming on the World Wide Web.” [Chapter 1] The Common Gateway Interface (CGI), O’ Reilly, 26 Aug. 1997, www.oreilly.com/openbook/cgi/ch01_01.html#:~:text=One%20of%20the%20Internet’s%20worst,model%20shown%20in%20Figure%201.1. Accessed 13 Sept. 2025.
                                    “Sharing Resources.” A Brief History of the Internet, www.usg.edu/galileo/skills/unit07/internet07_02.phtml. Accessed 12 Sept. 2025. 
                             Awais, Mr. "The Future of Web Servers: Emerging Trends and Technologies." *Medium*, 5 Nov. 2024, medium.com/@mrawais/the-future-of-web-servers-emerging-trends-and-technologies-7b5910fe4848. Accessed 13 Sept. 2025.
-                                        
+
                               Berners-Lee, Tim. "The World Wide Web: Past, Present and Future." *World Wide Web Consortium*, Aug. 1996, www.w3.org/People/Berners-Lee/1996/ppf.html. Accessed 13 Sept. 2025.
                                         Caldwell, Ronald. "The Future of Web Hosting: 8 Emerging Trends." *Liquid Web*, n.d., www.liquidweb.com/blog/future-of-web-hosting/. Accessed 13 Sept. 2025.
                                            Connolly, Ciaran. "Understanding the World Wide Web in 2025: Evolution and Future." *ProfileTree*, n.d., profiletree.com/what-is-the-world-wide-web/. Accessed 13 Sept. 2025.   
