--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">My IT Project</a>
+                <a class="navbar-brand" href="index.html">IT 3203 Project</a>
                 
                 <button class="navbar-toggler" type="button" 
                         data-bs-toggle="collapse" 
@@ -37,10 +37,10 @@
                             <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="page_1.html">Research 1</a>
+                            <a class="nav-link" href="page_1.html">Origins</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="page_2.html">Research 2</a>
+                            <a class="nav-link" href="page_2.html">Now and the Future</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="key_concepts.html">Key Concepts</a>
