--- a/page_2.html
+++ b/page_2.html
@@ -37,10 +37,10 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page_1.html">Research 1</a>
+                        <a class="nav-link" href="page_1.html">Origins</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page_2.html">Research 2</a>
+                        <a class="nav-link" href="page_2.html">Now and the Future</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="key_concepts.html">Key Concepts</a>
