--- a/page_2.html
+++ b/page_2.html
@@ -90,20 +90,20 @@
                                 <tr>
                                     <th scope="row">HTTP/1.1</th>
                                     <td>Standardized (1997)</td>
-                                    [cite_start]<td>Persistent connections, standardized connections [cite: 1]</td>
-                                    [cite_start]<td>Widely in use [cite: 1]</td>
+                                    <td>Persistent connections, standardized connections</td>
+                                    <td>Widely in use</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">HTTP/2</th>
                                     <td>Standardized (2015)</td>
-                                    [cite_start]<td>Multiplexing and Header Compression [cite: 1]</td>
-                                    [cite_start]<td>Widely in use [cite: 1]</td>
+                                    <td>Multiplexing and Header Compression</td>
+                                    <td>Widely in use [cite: 1]</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">HTTP/3 (QUIC)</th>
                                     <td>Emerging (2022)</td>
-                                    [cite_start]<td>Built on UDP, reduces latency, resilience to packet loss [cite: 1]</td>
-                                    [cite_start]<td>Adoption is partial but increasing [cite: 1]</td>
+                                    <td>Built on UDP, reduces latency, resilience to packet loss</td>
+                                    <td>Adoption is partial but increasing</td>
                                 </tr>
                             </tbody>
                         </table>
