changes made to page1 and index

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       </nav>
   </header>
   
- <div class ="container"> 
+  <div class="container my-4"> 
+    <div class="row justify-content-center">
+        <div class="col-12 col-lg-10">
 
 <h1>Introduction</h1>    
 <h2>Discovering the history, status, and future directions of the usage of: Web Servers</h2>
@@ -71,7 +73,10 @@
 </p>
 <img src="images/ivan-n-AfStyhXC5kM-unsplash.jpg" alt="Diagram of a Web Server" class="img-fluid">
 
-    </div>
+</div>
+</div>
+</div>
+</main>
     <script src="script.js"></script>
 </body>
 </html>
