index change with main moved

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
       </nav>
   </header>
-  
+  <main>
   <div class="container my-4"> 
     <div class="row justify-content-center">
         <div class="col-12 col-lg-10">
