--- a/reference_resource.html
+++ b/reference_resource.html
@@ -65,32 +65,26 @@
                     
     <h1>Reference resources</h1>
     <h2>Works Cited</h2>
-                                <p>MozDevNet. “Web.” MDN Blog RSS, developer.mozilla.org/en-US/docs/Web/HTTP/Guides/Compression. Accessed 13 Sept. 2025.
-                                  “Introduction to Interpreters.” GeeksforGeeks, GeeksforGeeks, 14 July 2025, www.geeksforgeeks.org/compiler-design/introduction-to-interpreters/. 
-                                     “Apache Web Server: Features & Alternatives.” OpenLogic, 11 Aug. 2023, openlogic.com/blog/apache-http-server.
-                               Gundavaram, Shishir. “CGI Programming on the World Wide Web.” [Chapter 1] The Common Gateway Interface (CGI), O’ Reilly, 26 Aug. 1997, www.oreilly.com/openbook/cgi/ch01_01.html#:~:text=One%20of%20the%20Internet’s%20worst,model%20shown%20in%20Figure%201.1. Accessed 13 Sept. 2025.
-                                   “Sharing Resources.” A Brief History of the Internet, www.usg.edu/galileo/skills/unit07/internet07_02.phtml. Accessed 12 Sept. 2025. 
-                            Awais, Mr. "The Future of Web Servers: Emerging Trends and Technologies." *Medium*, 5 Nov. 2024, medium.com/@mrawais/the-future-of-web-servers-emerging-trends-and-technologies-7b5910fe4848. Accessed 13 Sept. 2025.
-
-                              Berners-Lee, Tim. "The World Wide Web: Past, Present and Future." *World Wide Web Consortium*, Aug. 1996, www.w3.org/People/Berners-Lee/1996/ppf.html. Accessed 13 Sept. 2025.
-                                        Caldwell, Ronald. "The Future of Web Hosting: 8 Emerging Trends." *Liquid Web*, n.d., www.liquidweb.com/blog/future-of-web-hosting/. Accessed 13 Sept. 2025.
-                                           Connolly, Ciaran. "Understanding the World Wide Web in 2025: Evolution and Future." *ProfileTree*, n.d., profiletree.com/what-is-the-world-wide-web/. Accessed 13 Sept. 2025.   
-                                Gerstman, Matthew. "History of the Web: Part 1." *matthewgerstman.com*, n.d., www.matthewgerstman.com/tech/history-of-the-web/. Accessed 13 Sept. 2025.
-                                 RustcodeWeb. "The Evolution of Web Development (Past, Present, and Future)." *Medium*, 28 Apr. 2024, rustcodeweb.medium.com/the-evolution-of-web-development-past-present-and-future-b991ccaff3ec. Accessed 11 Sept. 2025.
-                                "Server Evolution: From Past to Present." *Thomas Tech LLC*, 13 Nov. 2024, www.thomastechllc.com/articles/server-evolution. Accessed 13 Sept. 2025.
-                               "The History of the World Wide Web and Its Current Status." *opsimathy.co.uk*, 19 Jan. 2025, www.opsimathy.co.uk/2025/01/19/the-history-of-the-world-wide-web-and-its-current-status/. Accessed 13 Sept. 2025.
-                               Gahtan, Barak, Robert J. Shahla, Reuven Cohen, and Alex M. Bronstein. 
-                              “ Estimating theNumber of HTTP/3 Responses in QUIC Using Deep Learning.” arXiv, 8 Oct. 2024, arxiv.org/abs/2410.06140.
-
-                                 Gupta, Abhinav, and Radim Bartos. “Enhancing QoE in HTTP/3 Using EPS Framework.” arXiv, 26 Apr. 2024, arxiv.org/abs/2404.17439.
-
-                                 Kerschbaumer, Christoph, Frederik Braun, Simon Friedberger, and Malte Jurgens. “The State of HTTPS Adoption on the Web.” Mozilla Corporation, Mar. 2025, research.mozilla.org/files/2025/03/the_state_of_https_adoption_on_the_web.pdf.
-
-                                  Perna, Gianluca, Martino Trevisan, Danilo Giordano, and Idilio Drago. “A First Look at HTTP/3 Adoption and Performance.” Computer Communications, vol. 190, 2022, pp. 78-93.
-
-                                   Trevisan, Martino, Danilo Giordano, Idilio Drago, and Ali Safari Khatouni. “Measuring HTTP/3: Adoption and Performance.” arXiv, 24 Feb. 2021, arxiv.org/abs/2102.12358. 
-
-                                </p>
+    <ul class="list-unstyled">
+        <li>MozDevNet. “Web.” MDN Blog RSS, developer.mozilla.org/en-US/docs/Web/HTTP/Guides/Compression. Accessed 13 Sept. 2025.</li>
+        <li>“Introduction to Interpreters.” GeeksforGeeks, GeeksforGeeks, 14 July 2025, www.geeksforgeeks.org/compiler-design/introduction-to-interpreters/.</li>
+        <li>“Apache Web Server: Features & Alternatives.” OpenLogic, 11 Aug. 2023, openlogic.com/blog/apache-http-server.</li>
+        <li>Gundavaram, Shishir. “CGI Programming on the World Wide Web.” [Chapter 1] The Common Gateway Interface (CGI), O’ Reilly, 26 Aug. 1997, www.oreilly.com/openbook/cgi/ch01_01.html#:~:text=One%20of%20the%20Internet’s%20worst,model%20shown%20in%20Figure%201.1. Accessed 13 Sept. 2025.</li>
+        <li>“Sharing Resources.” A Brief History of the Internet, www.usg.edu/galileo/skills/unit07/internet07_02.phtml. Accessed 12 Sept. 2025.</li>
+        <li>Awais, Mr. "The Future of Web Servers: Emerging Trends and Technologies." *Medium*, 5 Nov. 2024, medium.com/@mrawais/the-future-of-web-servers-emerging-trends-and-technologies-7b5910fe4848. Accessed 13 Sept. 2025.</li>
+        <li>Berners-Lee, Tim. "The World Wide Web: Past, Present and Future." *World Wide Web Consortium*, Aug. 1996, www.w3.org/People/Berners-Lee/1996/ppf.html. Accessed 13 Sept. 2025.</li>
+        <li>Caldwell, Ronald. "The Future of Web Hosting: 8 Emerging Trends." *Liquid Web*, n.d., www.liquidweb.com/blog/future-of-web-hosting/. Accessed 13 Sept. 2025.</li>
+        <li>Connolly, Ciaran. "Understanding the World Wide Web in 2025: Evolution and Future." *ProfileTree*, n.d., profiletree.com/what-is-the-world-wide-web/. Accessed 13 Sept. 2025.</li>
+        <li>Gerstman, Matthew. "History of the Web: Part 1." *matthewgerstman.com*, n.d., www.matthewgerstman.com/tech/history-of-the-web/. Accessed 13 Sept. 2025.</li>
+        <li>RustcodeWeb. "The Evolution of Web Development (Past, Present, and Future)." *Medium*, 28 Apr. 2024, rustcodeweb.medium.com/the-evolution-of-web-development-past-present-and-future-b991ccaff3ec. Accessed 11 Sept. 2025.</li>
+        <li>"Server Evolution: From Past to Present." *Thomas Tech LLC*, 13 Nov. 2024, www.thomastechllc.com/articles/server-evolution. Accessed 13 Sept. 2025.</li>
+        <li>"The History of the World Wide Web and Its Current Status." *opsimathy.co.uk*, 19 Jan. 2025, www.opsimathy.co.uk/2025/01/19/the-history-of-the-world-wide-web-and-its-current-status/. Accessed 13 Sept. 2025.</li>
+        <li>Gahtan, Barak, Robert J. Shahla, Reuven Cohen, and Alex M. Bronstein. “ Estimating theNumber of HTTP/3 Responses in QUIC Using Deep Learning.” arXiv, 8 Oct. 2024, arxiv.org/abs/2410.06140.</li>
+        <li>Gupta, Abhinav, and Radim Bartos. “Enhancing QoE in HTTP/3 Using EPS Framework.” arXiv, 26 Apr. 2024, arxiv.org/abs/2404.17439.</li>
+        <li>Kerschbaumer, Christoph, Frederik Braun, Simon Friedberger, and Malte Jurgens. “The State of HTTPS Adoption on the Web.” Mozilla Corporation, Mar. 2025, research.mozilla.org/files/2025/03/the_state_of_https_adoption_on_the_web.pdf.</li>
+        <li>Perna, Gianluca, Martino Trevisan, Danilo Giordano, and Idilio Drago. “A First Look at HTTP/3 Adoption and Performance.” Computer Communications, vol. 190, 2022, pp. 78-93.</li>
+        <li>Trevisan, Martino, Danilo Giordano, Idilio Drago, and Ali Safari Khatouni. “Measuring HTTP/3: Adoption and Performance.” arXiv, 24 Feb. 2021, arxiv.org/abs/2102.12358.</li>
+    </ul>
                     
                 </div>
             </div>
