Key concept page

--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@
                         
                         <h1>About Me</h1>
                         <h2>Junior IT Major at KSU</h2>
-                        <p>My first paragraph.</p>
-                        <h2>My Second Heading</h2>
+                        <p>First time using all these technolgies HTML/CSS/JavaScript.It's been a real learning curve but have enjoyed every minute of better understanding how the web works.</p>
+                        <h2></h2>
                         <p>My second paragraph.</p>
                         <p>this adjustment was made from my phone</p>
                         <h1>Hello, World!</h1>
