about me images uploaded

--- a/about.html
+++ b/about.html
@@ -61,14 +61,15 @@
             <div class="container my-4"> 
                 <div class="row justify-content-center">
                     <div class="col-12 col-lg-10"> 
-                        
-                        <h1>About Me</h1>
-                        <h2>Junior IT Major at KSU</h2>
-                        <p>First time using all these technolgies HTML/CSS/JavaScript.It's been a real learning curve but have enjoyed every minute of better understanding how the web works.</p>
-                        <h2></h2>
-                        <p>My second paragraph.</p>
-                        <p>this adjustment was made from my phone</p>
-                        <h1>Hello, World!</h1>
+                        <img src="images/aaron-mclean-pf7BliMKKxM-unsplash.jpg" alt="Diagram of a Web Server" class="img-fluid">
+                        <h1>About the Author</h1>
+<p class="lead">Hello everyone! I'm excited to introduce myself as a new developer in the making.</p>
+
+<p>I recently transitioned my focus at Kennesaw State Universityfrom the Software Engineering program to Information Technology (IT). This shift has allowed me to concentrate on the practical application and development aspects of technology, which is where my true passion lies.</p>
+
+<p>Over the past few months, I've genuinely enjoyed diving deep into HTML, CSS, and JavaScript. Building functional and responsive websites has been incredibly rewarding. </p>
+
+<p>I'm looking forward to continuing my developer journey and expanding my skill set in IT. I wish everyone the best on their own respective journeys!</p>
                         
                     </div>
                 </div>
