changes made main tag in index

--- a/page_2.html
+++ b/page_2.html
@@ -97,7 +97,7 @@
                                     <th scope="row">HTTP/2</th>
                                     <td>Standardized (2015)</td>
                                     <td>Multiplexing and Header Compression</td>
-                                    <td>Widely in use [cite: 1]</td>
+                                    <td>Widely in use</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">HTTP/3 (QUIC)</th>
