--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
-              
+              <main>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                       <li class="nav-item">
