corrections of nav bar

--- a/reference_resource.html
+++ b/reference_resource.html
@@ -31,36 +31,29 @@
                 </button>
                 
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ol class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
-                        <br>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
-                        <br>
                         <li class="nav-item">
                             <a class="nav-link" href="page_1.html">Origins</a>
                         </li>
-                        <br>
                         <li class="nav-item">
                             <a class="nav-link" href="page_2.html">Now and the Future</a>
                         </li>
-                        <br>
                         <li class="nav-item">
                             <a class="nav-link" href="key_concepts.html">Key Concepts</a>
                         </li>
-                        <br>
                         <li class="nav-item">
                             <a class="nav-link" href="reference_resource.html">References</a>
                         </li>
-                        <br>
                         <li class="nav-item">
                             <a class="nav-link" href="quiz.html">Quiz</a>
                         </li>
-                        <br>
-                    </ol>
+                    </ul>
                 </div>
             </div>
         </nav>
